--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
   force = true
 
 [[redirects]]
-  from = "https://manual.simtiva.app/*"
+  from = "https://manual.simtiva.app"
   to = "https://simtiva.app/manual.html"
   status = 301
   force = true
