--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,12 @@
 [[redirects]]
   from = "https://manual.simtiva.app"
   to = "https://simtiva.app/manual.html"
-  status = 200
+  status = 301
+  force = true
+
+[[redirects]]
+  from = "https://simtiva.netlify.app/manual"
+  to = "https://simtiva.app/manual.html"
+  status = 301
   force = true
 
